Do not handle rotation by exif flag with libtiff, which will do weird stuff like only rotating rows.

BUG: 274865